Add determinism, robustness, and native memory leak tests